<resources>
    <string name="app_name">Petrol Expense</string>
    <string name="str_display">Display</string>
    <string name="str_submit">Submit</string>
    <string name="str_km">Km.</string>
    <string name="str_amount">Amount</string>
    <string name="str_time">Time</string>
    <string name="str_date">Date</string>
    <string name="title_activity_admin_categoryactivtiy">AdminCategoryactivtiy</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
</resources>
