<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:elevation="20dp"
    app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="10dp"
    app:cardUseCompatPadding="true">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="5dp"
        android:orientation="vertical"
        android:padding="10dp"
        tools:context=".MainActivity">


        <TextView
            android:id="@+id/tvDatePik"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/str_date"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvTimePik"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/str_time"
            android:textSize="25sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/etAmount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/str_amount"
            android:inputType="number" />

        <EditText
            android:id="@+id/etKm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/str_km"
            android:inputType="number" />
       <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content">
        <Button
            android:id="@+id/btnSubmit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/box"
            android:text="@string/str_submit"
            android:layout_margin="10dp"
            android:textColor="@color/white"
            android:textSize="15sp" />
        <Button
            android:id="@+id/btnDisplay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/box"
            android:text="@string/str_display"
            android:layout_margin="10dp"
            android:textColor="@color/white"
            android:textSize="15sp" />
        </LinearLayout>
    </LinearLayout>
</android.support.v7.widget.CardView>